--- a/aria2.conf
+++ b/aria2.conf
@@ -51,6 +51,9 @@ log=/config/aria2.log
 #You can set either debug, info, notice, warn or error.
 log-level=error
 
+enable-dht6=false
+enable-dht=true
+dht-file-path=/config/dht.dat
 
 ## 进度保存相关 ##
 # 从会话文件中读取下载任务
